<resources>
    <string name="app_name">QuickGeometry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">QuickGeometry</string>
    <string name="nav_header_subtitle">Let\'s solve some Geometry</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_circle">Circle</string>
    <string name="menu_square">Square</string>
    <string name="menu_rectangular">Rectangular</string>
    <string name="menu_triangle">Triangle</string>

</resources>