<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_circle"
            android:icon="@drawable/ic_menu_circle"
            android:title="@string/menu_circle" />
        <item
            android:id="@+id/nav_square"
            android:icon="@drawable/ic_menu_square"
            android:title="@string/menu_square" />
        <item
            android:id="@+id/nav_rectangular"
            android:icon="@drawable/ic_menu_reqtan"
            android:title="@string/menu_rectangular" />
        <item
            android:id="@+id/nav_triangle"
            android:icon="@drawable/ic_menu_triangle"
            android:title="@string/menu_triangle" />
    </group>
</menu>